--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
     "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -22,11 +24,16 @@
     "@graphql-codegen/typescript": "^2.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-urql": "^3.5.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@typescript-eslint/parser": "^5.12.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   }
 }
